# esp32c6_examples

./: .gitignore  README.md
blinky/: Cargo.toml
current_configs/devcontainer/: Dockerfile
current_configs/devcontainers/: devcontainer.json
defmt/: Cargo.toml  README.md
defmt/.devcontainer/: devcontainer.json
embassy-blinky/: Cargo.toml  README.md
gpio_test/: Cargo.toml
gpio_test/.cargo/: config.toml
hello_world/: Cargo.toml
hello_world/.cargo/: config.toml
hello_world/.devcontainer/: Dockerfile  devcontainer.json
hello_world/examples/: blinky.rs
hello_world/src/: main.rs
mqtt_led/: Cargo.toml  README.md  build.rs  cfg.toml.example
mqtt_led_relay/: Cargo.toml  build.rs  cfg.toml.example
mqtt_led_relay/.cargo/: config.toml
mqtt_led_relay/src/: lib.rs  mqtt.rs  wifi.rs
mqtt_thread/: Cargo.toml  README.md  build.rs  cfg.toml.example
mqtt_thread/.cargo/: config.toml
thread-connect/: Cargo.toml
