[package]
edition = "2021"
name    = "blinky"
version = "0.1.0"

[[bin]]
name = "blinky"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt            = "1.0.1"
esp-hal          = { version = "1.0.0-beta.0", features = ["defmt", "esp32c6"] }
# esp-hal-smartled = { version = "0.14.0", features = ["defmt", "esp32c6" ] }
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git" }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target       = { version = "0.6.1", features = ["defmt"] }
smart-leds = "0.4.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
