[package]
edition = "2021"
name    = "gpio_test"
version = "0.1.0"

[[bin]]
name = "gpio_test"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt            = "1.0.1"
esp-hal          = { version = "1.0.0-beta.0", features = ["defmt", "esp32c6", "unstable"] }
rtt-target       = { version = "0.6.1", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
