[package]
edition = "2021"
name = "mqtt_thread"
version = "0.1.0"

[[bin]]
name = "mqtt_thread"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "proto-ipv6",
  "medium-ip",
  "defmt",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
esp-ieee802154 = { version = "0.6.0", features = ["defmt", "esp32c6"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c6"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
toml-cfg = "0.2.0"

openthread = { git = "https://github.com/Jerry1098/openthread.git", features = [
  "embassy-net-driver-channel",
  "defmt",
  "srp",
  "edge-nal",
  "esp-ieee802154",
  "udp"
] }

tinyrlibc = { version = "0.5.0", default-features = false, features = [
  "utoa",
  "strtoul",
] }
rust-mqtt = { version = "0.3.0", default-features = false, features = ["defmt"]}

[build-dependencies]
toml-cfg = "0.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
