[package]
edition = "2021"
name = "thread-connect"
version = "0.1.0"

[[bin]]
name = "thread-connect"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "1.0.1"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "generic-queue-8"] }
esp-alloc = { version = "0.7.0", features = ["defmt"] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c6"] }
esp-ieee802154 = { version = "0.6.0", features = ["defmt", "esp32c6"] }
openthread = { git = "https://github.com/esp-rs/openthread.git", features = [
  "defmt",
  "udp",
  "srp",
  "isupper",
] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = { version = "2.1.0", features = ["nightly"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
